# project-

./: .gitignore  ACADEMIC_QUICKSTART.md  AI_BRAINS_GUIDE.md  AI_TRAINING_VISUALIZATION.md  ENVIRONMENT_GUIDE.md  FAST_NEURON_LEARNING.md  HIZLI_KULLANIM.md  INTERACTIVE_CONTROL_GUIDE.md  KOLAY_BASLATMA.md  MANIFEST.in  MICROLIFE_ACADEMIC.cpp  MICROLIFE_CINEMATIC  MICROLIFE_ML_GUIDE.md  MICROLIFE_ULTIMATE  MICROLIFE_ULTIMATE_README.md  Makefile.academic  Makefile.microlife.cinematic  Makefile.nature  Makefile.nature.ultimate  NEAT_ARCHITECTURE.md  NEURON_BIOLOGY.md  NEURON_LEARNING.md  NEURON_PERSONALITIES.md  ONLY_FOR_NATURE  ONLY_FOR_NATURE_README.md  ONLY_FOR_NATURE_ULTIMATE  ONLY_FOR_NATURE_ULTIMATE.cpp  ONLY_FOR_NATURE_ULTIMATE_README.md  PHASE3_ENVIRONMENTS_COMPLETE.md  PHASE4_INTERACTIVE_COMPLETE.md  PHASE5_ARCHITECTURE.md  PHASE5_COMPLETE.md  PHD_RESEARCH_GUIDE.md  README.md  README_ACADEMIC.md  START_SIMULATION.bat  START_SIMULATION.py  START_SIMULATION.sh  VERIFICATION_RESULTS.md  analysis_toolkit.py  (+32 more)
cpp/: MICROLIFE_ULTIMATE.cpp  MICROLIFE_ULTIMATE_CINEMATIC.cpp  Makefile.microlife  ONLY_FOR_NATURE.cpp
cpp_visualization/: CMakeLists.txt  ai_models_runner.py  neuron_learning_fast.cpp  neuron_visualizer.cpp  test_learning_headless.cpp
demos/: demo_moderngl.py  demo_neat_microlife.py  demo_neat_xor.py  demo_scientific_analytics.py  demo_training_viz.py
docs/: HYPERPARAMETER_GUIDE.md  MODERNGL_ARCHITECTURE.md  MODERNGL_GUIDE.md  NASIL_TEST_EDILIR.md  PHASE2_COMPLETE.md  PHASE5_KULLANIM_KILAVUZU.md  QUICK_START.md  QUICK_START_PERSONALITIES.md  SCIENTIFIC_ANALYTICS.md  VISUAL_GUIDE.md
experiments/: benchmark_rl_vs_random.py  train_and_evaluate.py
gym/: QUICKSTART_CPP.md  README.md
microlife/: __init__.py  config.py  gym_env.py  logger.py
pixhawk_flight_analyzer/: __init__.py  cli.py  data_loader.py  data_processor.py  statistics.py  visualization.py
project++/: pointerlar.cpp  project++.vcxproj
scripts/: analyze.py  train.py  train_visual.py
tests/: test_brain_neuro.py  test_brains.py  test_gym_env.py  test_neuron_personalities.py  test_simulation.py  test_visualization.py
(+93 files in other folders)
